# statman

./: .gitignore  README.md  pyproject.toml
statman/: __main__.py  commands.py  details.json  leaderboard.py  profile.py  usernames.py
